# fprime-yamcs

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/fprime_yamcs/: __main__.py
src/fprime_yamcs/events/: __main__.py  logging.py  processor.py
src/fprime_yamcs/yamcs/: pom.xml
src/fprime_yamcs/yamcs/src/main/java/com/example/myproject/: FprimeCommandPostprocessor.java  FprimeFilePacketService.java  FprimePacketPreprocessor.java  MyCommandPostprocessor.java  MyPacketPreprocessor.java
src/fprime_yamcs/yamcs/src/main/yamcs/etc/: yamcs.fprime-project.yaml
