[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm[toml]>=6.2"]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "fprime-yamcs"
dynamic = ["version"]
description = "FPrime/YAMCS Bridge: Connects F Prime to YAMCS with event support"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Michael Starch", email = "LeStarch@googlemail.com"}
]
maintainers = [
    {name = "Michael Starch", email = "LeStarch@googlemail.com"}
]
keywords = ["fprime", "yamcs", "events", "telemetry", "spacecraft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "yamcs-client>=1.12.1",
    "fprime-gds>=4.1.0",
    "fprime-xtce>=0.1.0",
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/fprime-community/fprime-yamcs"
Documentation = "https://github.com/fprime-community/fprime-yamcs"
Repository = "https://github.com/fprime-community/fprime-yamcs"
Issues = "https://github.com/fprime-community/fprime-yamcs/issues"

[project.scripts]
fprime-yamcs-events = "fprime_yamcs.events.__main__:main"
fprime-yamcs = "fprime_yamcs.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fprime_yamcs"]


[tool.setuptools.package-data]
fprime_yamcs = [
    "pox.xml",
    "src/main/yamcs/etc/*",
    "src/main/java/*"
]
